[package]
name          = "rust-template"
description   = "Template for single-crate Rust projects"
version       = "0.0.0"
authors       = ["Larry Engineer <gm@larry.engineer>"]
edition       = "2021"
rust-version  = "1.65"
license       = "UNLICENSED"
homepage      = "https://larry.engineer"
repository    = "https://github.com/steak-enjoyers/cw-sdk"
documentation = "https://github.com/steak-enjoyers/cw-sdk#README"
keywords      = ["template"]

[dependencies]
